# bitKlavier2

./: .gitmodules  .lldbinit  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report_external.yml  bug_report_internal.yml  compilation_errors.yml  documentation.yml
.github/workflows/: cmake_ctest.yml
GREG/: VOLUMES_GDFX_9.5.24_FINAL.sp2
assets/: default.bitklavierskin
docs/: PampleJuceREADME.md
misc_scripts/: class_names.txt  newpy.py  prepend_juce.py
misc_scripts/outd/: BKSlider.cpp  BKSlider.h
misc_scripts/source/: BKLookAndFeel.cpp  envelope_editor.cpp
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/common/: Connection.cpp  Connection.h  Factory.h  Identifiers.h  Type.cpp  Type.h  border_bounds_constrainer.cpp  border_bounds_constrainer.h  buffer_debugger.cpp  buffer_debugger.h  common.h  load_save.cpp  load_save.h  midi_manager.cpp  midi_manager.h  startup.cpp  startup.h  synth_base.cpp  synth_base.h  synth_gui_interface.cpp  synth_gui_interface.h  tracktion_AtomicWrapper.h  tracktion_ConstrainedCachedValue.h  utils.h  value_tree_debugger.cpp
source/common/templates/: Factory.h
source/common/valuetree_utils/: VariantConverters.h  value_tree_debugger.h
source/interface/: BKSliders.cpp  BKSliders.h  ConstructionSite.cpp  ConstructionSite.h  FullInterface.cpp  FullInterface.h  ModulationLine.cpp  ModulationLine.h  OpenGLImageFileComponent.cpp  OpenGLImageFileComponent.h  TestParamHolder.cpp  TestParamHolder.h  about_section.cpp  about_section.h  bitKlavierGuiInterface.cpp  bitKlavierGuiInterface.h  bitklavier_AudioDeviceSelectorComponent.cpp  bitklavier_AudioDeviceSelectorComponent.h  draggable_component.cpp  draggable_component.h  envelope_editor.cpp  envelope_editor.h  envelope_section.cpp  envelope_section.h  header_section.cpp  header_section.h  library_section.cpp  library_section.h  main_section.cpp  main_section.h  open_gl_background.cpp  open_gl_background.h  open_gl_component.cpp  open_gl_component.h  open_gl_image.cpp  open_gl_image.h  open_gl_image_component.cpp  open_gl_image_component.h  open_gl_line_renderer.cpp  open_gl_line_renderer.h  (+18 more)
source/interface/BKitems/: BKItem.cpp  BKItem.h  BKItem.h.orig  BKPort.cpp  BKPort.h
source/interface/Cable/: Cable.cpp  Cable.h  CableView.cpp  CableView.h  CubicBezier.h
source/interface/ParameterView/: DirectParametersView.cpp  DirectParametersView.h  OpenGL_BKSliders.h  OpenGL_RangeSlider.h  OpenGL_StackedSlider.h  OpenGlBKSliders.h  OpenGlRangeSlider.h  OpenGlStackedSlider.h  OpenGlTranspositionSlider.h  ParametersView.cpp  ParametersView.h  StackedSliderSection.h
source/interface/Preparations/: BlendronicPreparation.cpp  BlendronicPreparation.h  DirectPreparation.cpp  DirectPreparation.h  KeymapPreparation.cpp  KeymapPreparation.h  ModulationPreparation.cpp  ModulationPreparation.h  NostalgicPreparation.cpp  NostalgicPreparation.h  PreparationSection.cpp  PreparationSection.h  PreparationSection.h.orig  PreparationSelector.cpp  PreparationSelector.h  Preparations.h  ResonancePreparation.cpp  ResonancePreparation.h  SynchronicPreparation.cpp  SynchronicPreparation.h  TempoPreparation.cpp  TempoPreparation.h  TuningPreparation.cpp  TuningPreparation.h
source/interface/components/: BKSliders.cpp  BKSliders.h  bitklavier_AudioDeviceSelectorComponent.cpp  bitklavier_AudioDeviceSelectorComponent.h  draggable_component.cpp  draggable_component.h  envelope_editor.cpp  synth_button.cpp  synth_button.h  synth_slider.cpp  synth_slider.h
source/interface/components/BKitems/: BKItem.cpp  BKItem.h  BKPort.cpp  BKPort.h  ModulationItem.h
source/interface/components/Cable/: Cable.cpp  CubicBezier.h
source/interface/components/opengl/: open_gl_image.cpp  (+12 more)
source/interface/look_and_feel/: BKGraphicsConstants.h  BKLookAndFeel.cpp  BKLookAndFeel.h  curve_look_and_feel.cpp  curve_look_and_feel.h  default_look_and_feel.cpp  default_look_and_feel.h  fonts.cpp  fonts.h  paths.h  shaders.cpp  shaders.h  skin.cpp  skin.h  text_look_and_feel.cpp
source/interface/sections/: CableView.cpp  CableView.h  ConstructionSite.cpp  ConstructionSite.h  ModulationLineView.cpp  ModulationLineView.h  about_section.cpp  envelope_section.h  header_section.cpp  header_section.h  library_section.cpp  main_section.cpp  main_section.h  popup_browser.cpp  popup_browser.h  preset_browser.cpp  preset_browser.h  synth_section.cpp  synth_section.h
source/modulation/: Factory.h  ModulationConnection.cpp  ModulationConnection.h  ModulationModuleSection.cpp  ModulationModuleSection.h  ModulationSection.cpp  ModulationSection.h  ModuleListInterface.h  SoundModuleSection.cpp  SoundModuleSection.h  bar_renderer.cpp  bar_renderer.h  modulation_button.cpp  modulation_button.h  modulation_manager.cpp  modulation_manager.h  modulation_meter.cpp  modulation_meter.h
source/standalone/: main.cpp  synth_editor.cpp  synth_editor.h
source/synthesis/: EnvParams.h  RangeSliderParams.h  SampleLoadManager.cpp  SampleLoadManager.h  TransposeParams.h  synth_base.cpp  synth_base.h
source/synthesis/framework/: BKADSR.h  BlendronicProcessor.h  Connection.cpp  Connection.h  DirectProcessor.cpp  DirectProcessor.h  KeymapProcessor.cpp  KeymapProcessor.h  ModulationBus.h  ModulationProcessor.cpp  ModulationProcessor.h  NostalgicProcessor.h  OscillatorProcessor.h  PluginBase.h  PolygonalOscProcessor.cpp  PolygonalOscProcessor.h  PreparationModule.cpp  PreparationModule.h  PreparationStateImpl.h  ProcessorBase.h  ResonancePreparation.cpp  ResonancePreparation.h  ResonanceProcessor.cpp  ResonanceProcessor.h  SynchronicProcessor.h  TempoProcessor.h  TuningProcessor.h  UserPreferences.h  circular_queue.h  common.h  matrix.h  midi_manager.cpp  midi_manager.h  note_handler.h  poly_utils.h  poly_values.h  tuning_systems.h  utils.cpp  utils.h
source/synthesis/lookups/: lookup_table.h  memory.h
source/synthesis/sound_engine/: AudioProcessorGraph.h  sound_engine.cpp  sound_engine.h
source/synthesis/synth_engine/: AudioProcessorGraph.cpp  AudioProcessorGraph.h  sound_engine.cpp  sound_engine.h
tests/: PluginBasics.cpp
(+20 files in other folders)
